# OpenEdits

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/scripts/: candy.lua  coins.lua  constants.lua  hidden.lua  keys_doors.lua  main.lua  music.lua  player_data.lua  smileys.lua  teleporter.lua  unittest.lua  unittest_server.lua
assets/sounds/: coin.mono_s16.raw
cmake/: FindENet.cmake  FindLuaJIT.cmake  SetVersion.cmake
doc/: DIRECTION.md  lua_api.md
misc/: AppRun.sh  pack.sh
misc/licenses/: sqlite3.txt
src/: CMakeLists.txt  main.cpp  version.cpp.in  version.h
src/client/: CMakeLists.txt  client.cpp  client.h  client_packethandler.cpp  clientmedia.cpp  clientmedia.h  clientscript.cpp  clientscript.h  gameevent.cpp  gameevent.h  hudelement.cpp  hudelement.h  localplayer.cpp  localplayer.h  tilecache.cpp  tilecache.h
src/core/: CMakeLists.txt  auth.cpp  auth.h  blockmanager.cpp  blockmanager.h  blockmanager_reg.cpp  blockparams.cpp  blockparams.h  chatcommand.cpp  chatcommand.h  compressor.cpp  compressor.h  connection.cpp  connection.h  eeo_converter.cpp  environment.cpp  environment.h  events.h  filesystem.cpp  filesystem.h  friends.h  logger.cpp  logger.h  macros.h  mediamanager.cpp  mediamanager.h  network_enums.h  operators.cpp  operators.h  packet.cpp  packet.h  player.cpp  player.h  playerflags.cpp  playerflags.h  script.cpp  script.h  sha3.c  sha3.h  smileydef.h  (+8 more)
src/core/script/: CMakeLists.txt  playerref.cpp  playerref.h  script.cpp  script.h  script_callbacks.cpp  script_environment.cpp  script_player.cpp  script_registration.cpp  script_utils.cpp  script_utils.h  scriptevent.cpp  scriptevent.h  scriptevent_fwd.h
src/gui/: CBulkSceneNode.cpp  CBulkSceneNode.h  CMakeLists.txt  blockselector.cpp  blockselector.h  connect.cpp  connect.h  game_commands.cpp  game_commands.h  gameplay.cpp  gameplay.h  gui.cpp  gui.h  guibuilder.cpp  guibuilder.h  guiscript.cpp  guiscript.h  loading.cpp  loading.h  lobby.cpp  lobby.h  minimap.cpp  minimap.h  register.cpp  register.h  render.cpp  render.h  smileyselector.cpp  sound.cpp  sound.h  texturemanager.cpp  texturemanager.h
src/gui/gameplay/: blockselector.cpp  blockselector.h  gameplay.cpp  gameplay.h  minimap.cpp  minimap.h  smileyselector.cpp  smileyselector.h  world_render.cpp  world_render.h
src/gui/guilayout/: guilayout.cpp  guilayout.h  guilayout_irrlicht.cpp  guilayout_irrlicht.h
src/server/: database.cpp  database.h  database_auth.cpp  database_auth.h  database_world.cpp  database_world.h  eeo_converter.cpp  eeo_converter.h  remoteplayer.cpp  remoteplayer.h  server.cpp  server.h  server_commands.cpp  server_packethandler.cpp  servermedia.cpp  servermedia.h  serverscript.cpp  serverscript.h
src/tests/: test_auth.cpp  test_chatcommand.cpp  test_connection.cpp  test_database.cpp  test_eeo_converter.cpp  test_gui_gameplay.cpp  test_gui_layout.cpp  test_irr.cpp  test_mediamanager.cpp  test_packet.cpp  test_physics.cpp  test_script.cpp  test_sound.cpp  test_utilities.cpp  test_world.cpp  unittest.cpp  unittest_internal.h
worlds/: README.txt
